Try to render register page without Razorpage

--- a/Views/Tasks/Edit.cshtml
+++ b/Views/Tasks/Edit.cshtml
@@ -19,6 +19,17 @@
                 <span asp-validation-for="TaskTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="form-label">
+                    @Html.DisplayNameFor(model => model.TaskStatus)
+                </label>
+                <div class="d-flex gap-2">
+                    <input class="form-check-input" id="check-status" asp-for="TaskStatus" />
+                    <div class="status">
+                        @Html.DisplayTextFor(model => model.TaskStatus)
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
                 <label asp-for="TaskDescription" class="control-label"></label>
                 <input asp-for="TaskDescription" class="form-control" />
                 <span asp-validation-for="TaskDescription" class="text-danger"></span>
@@ -42,3 +53,34 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+    //console.log($(".status"));
+    $(".status").each(function (index) {
+        var text = $(this).text();
+        console.log(text);
+        text = text.replace(/\s/g, '');
+        if (text == "True") {
+            $(this).html("Done");
+        }
+        else {
+            $(this).html("Pending");
+        }
+    })
+
+    $("#check-status").on("change", function () {
+        var value = this.checked;
+
+        if (value == false) {
+            $(".status").html("Pending");
+        }
+        else {
+            $(".status").html("Done");
+        }
+    })
+</script>
+    
