--- a/Views/Tasks/Delete.cshtml
+++ b/Views/Tasks/Delete.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.TaskTitle)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.TaskStatus)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.TaskStatus)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TaskDescription)
         </dt>
         <dd class = "col-sm-10">
