Finish create database with Identity user

--- a/Views/Tasks/Index.cshtml
+++ b/Views/Tasks/Index.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Index";
+    if (ViewData["Perpage"] == null) ViewData["Perpage"] = 10;
+    if (ViewData["Page"] == null) ViewData["Page"] = 1;
 }
 
 <p>
@@ -55,6 +57,31 @@
     </tbody>
 </table>
 
+<div class="d-flex align-items-center justify-content-between">
+    <div class="d-flex align-items-center" style="gap: 5px">
+        <div><span>Hiển thị</span></div>        
+        <input name="limit" id="limit" class="form-control" style="width: 80px;" type="number" value="@ViewData["Perpage"]" />
+        <div>mỗi trang</div>
+    </div>
+    <div class="d-flex align-items-center" style="gap: 10px; font-size: 15px;">
+        <div class="prev">
+            <button id="previous-button">&lt;</button>
+        </div>
+        <div class="current">
+            <select id="page" class="form-control form-field" placeholder="@ViewData["Page"]" style="width: 50px;">
+                <option id="page-selected" selected="" value="" disabled="">@ViewData["Page"]</option>
+                @foreach (var i in Enumerable.Range(0, (int)@ViewData["Page"]))
+                {
+                    <option value="@i">@i+1</option>
+                }                
+            </select>
+        </div>
+        <div class="next">
+            <button id="next-button">&gt;</button>
+        </div>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
         crossorigin="anonymous"></script>
@@ -72,41 +99,60 @@
         }
     })
 
+    function HandleFilter() {       
+        let title = $("#title").val();
+        let page = $("#page").val();
+        let limit = $("#limit").val();
+        //get current url
+        let url = new URL(window.location.href);
+
+        //get the search parameters from the url
+        let params = new URLSearchParams(url.search);
+
+        //remove the filter parameters   
+        params.delete('title');
+        params.delete('page');
+        params.delete('limit'); //?
+
+        //add the filter parameters   
+        if (title)
+            params.set('title', title);
+        if (page)
+            params.set('page', page);
+        if (limit)
+            params.set('limit', limit);
+
+        //set the search parameters back to the url
+        url.search = params.toString();
+
+        //navigate to the new url
+        window.location.href = url.toString();
+    }
+
     // handle filter submit
     $(document).keypress(function (event) {
         var keycode = (event.keyCode ? event.keyCode : event.which);
         if (keycode == '13') {
-            $.ajax({
-                url: `http://localhost:5265/NewTask/Filter?title=${$("#title").val()}`,
-                method: "post",
-                context: { "title": $("#title").val() }
-            }).done(function (data) {
-                console.log(data);
-                var htmlText = data.map(d => {
-                    if (d.taskStatus == true) {
-                        status = "Done";
-                    }
-                    else {
-                        status = "Pending";
-                    }
-
-                    return `
-                                    <tr>
-                                        <td>${d.taskTitle}</td>
-                                        <td>${status}</td>
-                                        <td>${d.taskDescription}</td>
-                                        <td>${d.taskDueDate}</td>
-                                        <td class="d-flex gap-2">
-                                            <a href="/Edit" class="btn btn-primary" >Edit</a>
-                                            <a href="/Details/${d.taskId}" class="btn btn-primary" >Details</a>
-                                            <a href="/Delete/${d.taskId}" class="btn btn-primary" >Delete</a>
-                                        </td>
-                                    </tr>`
-                }).join(" ");
-
-                $("#table-body").html(htmlText);
-            })
+            HandleFilter();
         }
-
     });
+
+    $('#page').change(function() {
+        HandleFilter();
+    });
+    
+    $('#next-button').click(function() {  
+        let curpage = {{page}};
+        $('#page').val(parseInt(curpage)+1);        
+        $('#page-selected').val(parseInt(curpage)+1);
+        HandleFilter();
+    });
+
+    $('#previous-button').click(function() {
+        let curpage = {{page}};
+        $('#page').val(curpage-1);  
+        $('#page-selected').val(parseInt(curpage)-1);      
+        HandleFilter();
+    });
+
 </script>
